cabal-version:      2.2
name:               hs-boot-and-th
version:            0.1.0.0
license:            BSD-3-Clause
build-type:         Simple

library
    ghc-options: -Wall
    exposed-modules:
      ModA
      ModB
      ModC
      ModD
    build-depends:    base, template-haskell
    hs-source-dirs:   src
